# tbv8

./: .gitignore  README.md  main.py  pyproject.toml
apps/aggregator/: main.py
apps/backfiller/: main.py
apps/backtester/: main.py
apps/recorder/: main.py
apps/repair_gaps/: main.py
apps/runtime/: main.py
config/: data.yaml  history.yaml
config/strategies/: btc_usdt_perp_v1.yaml
config/venues/: binance_spot.yaml  hyperliquid.yaml  mexc.yaml
