[project]
name = "tbv8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "black>=25.12.0",
    "loguru>=0.7.3",
    "nautilus-trader>=1.222.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "websockets>=16.0",
]
